# patina

./: Cargo.toml  LICENSE  README.md  crates.js  help.html  search-index.js  settings.html  src-files.js  terminalizer.yml
.github/workflows/: check-version-bump.yaml  continuous-deployment.yaml  continuous-integration.yaml  generate-docs.yaml
dotpatina/: all.html  fn.main.html  index.html  sidebar-items.js
dotpatina/cli/: enum.Command.html  index.html  sidebar-items.js  struct.CliPatinaInterface.html  struct.GlobalOptions.html  struct.PatinaCli.html  struct.PatinaCommandOptions.html
dotpatina/diff/: fn.diff_line_to_string.html  index.html  (+3 more)
enum_as_inner/: all.html  derive.EnumAsInner.html  index.html
handlebars/: all.html  enum.BlockParamHolder.html  enum.Path.html  enum.PathSeg.html  enum.RenderErrorReason.html  enum.ScopedJson.html  enum.TemplateErrorReason.html  fn.html_escape.html  fn.no_escape.html  fn.to_json.html  index.html  macro.handlebars_helper.html  struct.BlockContext.html  struct.BlockParams.html  struct.Context.html  struct.Decorator.html  struct.Handlebars.html  struct.Helper.html  struct.LocalVars.html  struct.PathAndJson.html  struct.RenderContext.html  struct.RenderError.html  struct.StringOutput.html  struct.TemplateError.html  trait.DecoratorDef.html  trait.Evaluable.html  trait.HelperDef.html  trait.JsonRender.html  trait.JsonTruthy.html  trait.Output.html  trait.Renderable.html  type.EscapeFn.html  type.HelperResult.html
output/: .gitignore
patina/: all.html  fn.main.html  index.html  sidebar-items.js
scripts/: check_version.sh  clean_output.sh
src/: cli.rs  diff.rs  engine.rs  errors.rs  main.rs  patina.rs  patina_yaml.rs  templating.rs  utils.rs
toml/: all.html  enum.Value.html  fn.from_str.html  fn.to_string.html  fn.to_string_pretty.html  index.html  macro.toml.html  struct.Deserializer.html  struct.Serializer.html  struct.Spanned.html  type.Table.html
winnow/: all.html  index.html  trait.ModalParser.html  trait.Parser.html
yaml_rust/: all.html  index.html
(+610 files in other folders)
