[package]
name = "patina"
version = "0.1.0"
edition = "2021"
authors = ["Cameron Taylor <axis7818@gmail.com>"]
description = "Patina is a rust application for managing system dotfiles and configuration."
readme = "README.md"
homepage = "https://github.com/axis7818/patina"
repository = "https://github.com/axis7818/patina"
license = "MIT"
keywords = ["dotfiles", "configuration"]
categories = ["command-line-utilities", "config"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
yaml-rust = "0.4"
