[package]
name = "dotpatina"
version = "0.1.11"
edition = "2021"
authors = ["Cameron Taylor <axis7818@gmail.com>"]
description = "dotpatina is a rust application for managing system dotfiles and configuration"
readme = "README.md"
homepage = "https://github.com/axis7818/dotpatina"
repository = "https://github.com/axis7818/dotpatina"
license = "MIT"
keywords = ["dotfiles", "configuration"]
categories = ["command-line-utilities", "config"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
clap-verbosity-flag = "3.0"
colored = "3.0.0"
dirs = "6.0.0"
enum-as-inner = "0.6"
env_logger = "0.11"
handlebars = "6.3"
log = "0.4"
path-clean = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1.0"
similar = "2.7.0"
toml = "0.8"
yaml-rust = "0.4"
